--- a/app/views/hearings/pages/language.html
+++ b/app/views/hearings/pages/language.html
@@ -55,7 +55,7 @@ Case details
                                             <div class="govuk-checkboxes__item" onclick="toggleresonableadjustments1();">
                                                 <input class="govuk-checkboxes__input" id="resonableadjustments1" name="resonableadjustments" type="checkbox" value="resonableadjustments1" >
                                                 <label class="govuk-label govuk-checkboxes__label" for="resonableadjustments1" >
-                                                    <span onclick="toggleresonableadjustments1();">Andy Appleyard </span>
+                                                    <span onclick="toggleresonableadjustments1();">Jane Smith  </span>
                                                 </label>
                                             </div>
 
@@ -69,10 +69,11 @@ Case details
                                                     </div>
 
 
+
                                             <div class="govuk-checkboxes__item"  onclick="toggleresonableadjustments2();">
                                                 <input class="govuk-checkboxes__input" id="resonableadjustments2" name="resonableadjustments" type="checkbox" value="resonableadjustments1">
                                                 <label class="govuk-label govuk-checkboxes__label" for="resonableadjustments2">
-                                                    <span onclick="toggleresonableadjustments2();">Bella Brady</span>
+                                                    <span onclick="toggleresonableadjustments2();">DWP</span>
                                                 </label>
                                             </div>
 
@@ -85,6 +86,7 @@ Case details
                                                         </div>
                                                     </div>
 
+                                            <!--
 
                                             <div class="govuk-checkboxes__item"  onclick="toggleresonableadjustments3();">
                                                 <input class="govuk-checkboxes__input" id="resonableadjustments3" name="resonableadjustments" type="checkbox" value="resonableadjustments1">
@@ -101,6 +103,8 @@ Case details
                                                             <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="3" aria-describedby="more-detail-hint"></textarea>
                                                         </div>
                                                     </div>
+
+                                           -->
 
                                         </div>
 
