--- a/app/views/hearings/pages/panel.html
+++ b/app/views/hearings/pages/panel.html
@@ -14,7 +14,7 @@ Case details
 
 
 
-                        <h2 class="govuk-heading-l">Panel</h2>
+                        <h2 class="govuk-heading-l">Who will be on the hearing panel?</h2>
 
 
                         <form
@@ -57,7 +57,7 @@ Case details
                                     <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
 
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="panel-1" name="panelsame" type="radio" value="Same panel as last hearing" >
+                                            <input class="govuk-radios__input" id="panel-1" name="panelsame" type="radio" value="Yes - use the same panel as most recent hearing" >
                                             <label class="govuk-label govuk-radios__label" for="panel-1"  onclick="showJudges();">
                                                 Yes - use the same panel as most recent hearing
                                             </label>
