--- a/app/views/hearings/pages/paneldifferent.html
+++ b/app/views/hearings/pages/paneldifferent.html
@@ -158,14 +158,14 @@ Case details
                                                         <label class="govuk-label govuk-!-font-weight-bold" for="contact-by-email">
                                                             Exclude a judge who wasn't on a previous panel (optional)
                                                         </label>
-                                                        <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false" autocomplete="email"  id="exludejudgefield"  style="display:none;">
+                                                        <input class="govuk-input govuk-!-width-one-third" name="contact-by-email" type="email" spellcheck="false" autocomplete="email"  id="exludejudgefield"  style="display:none;">
                                                     </div>
-                                                    <button class="govuk-button govuk-button--secondary govuk-!-margin-top-1 " data-module="govuk-button"  id="exludenewjudge" onclick="excludejudge();">
+                                                    <p class="govuk-button govuk-button--secondary govuk-!-margin-top-0 " data-module="govuk-button" id="exludenewjudge" onclick="excludejudge();">
                                                         Exclude a judge
-                                                    </button>
-                                                    <button class="govuk-button govuk-button--secondary govuk-!-margin-top-3 " data-module="govuk-button" id="exludeanotherjudge" style="display:none;">
+                                                    </p>
+                                                    <p class="govuk-button govuk-button--secondary govuk-!-margin-top-2 " data-module="govuk-button" id="exludeanotherjudge"  style="display: none;">
                                                         Exclude another judge
-                                                    </button>
+                                                    </p>
                                                 </div>
 
 
@@ -204,7 +204,7 @@ Case details
                                     </label>
                                     <input class="govuk-input govuk-!-width-one-third" name="contact-by-email" type="text" spellcheck="false" id="excludepersonsname" style="display:none;">
                                 </div>
-                                <p class="govuk-button govuk-button--secondary govuk-!-margin-top-0 " data-module="govuk-button" id="excludeperson" onclick="excludeperson();">
+                                <p class="govuk-button govuk-button--secondary govuk-!-margin-top-0 " data-module="govuk-button" id="excludeperson" onclick="excludejudge();">
                                     Exclude person
                                 </p>
                                 <p class="govuk-button govuk-button--secondary govuk-!-margin-top-3 " data-module="govuk-button" id="excludeanotherperson" style="display:none;">
