--- a/app/views/hearings/pages/timing.html
+++ b/app/views/hearings/pages/timing.html
@@ -234,11 +234,16 @@ Case details
                                         <div class="govuk-radios__conditional govuk-!-padding-bottom-1 govuk-!-padding-top-3" style="display:none;" id="rangedatesection">
 
 
+
+                                            <div id="waste-hint" class="govuk-hint">
+                                                You can enter either or both dates.
+                                            </div>
+
                                             <div class="govuk-form-group">
                                                 <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
                                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                                         <h1 class="govuk-fieldset__heading">
-                                                            Earliest hearing date  (optional)
+                                                            Earliest hearing date
                                                         </h1>
                                                     </legend>
                                                     <div class="govuk-date-input" id="passport-issued">
@@ -274,7 +279,7 @@ Case details
                                                 <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
                                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                                         <h1 class="govuk-fieldset__heading">
-                                                            Latest hearing date  (optional)
+                                                            Latest hearing date
                                                         </h1>
                                                     </legend>
                                                     <div class="govuk-date-input" id="passport-issued">
